# PentestGPT

./: .gitignore  LICENSE.md  Makefile  NLP_RESTAPI_Generation.py  PentestGPT_design.md  README.md  SECURITY.md  chat.py  example_chatgpt_api.py  example_chatgpt_playwright.py  example_sqlmap.py  extract_cookie.py  gemini_api.py  main.py  new_readme.md  pyproject.toml  requirements.txt  setup.py  test_connection.py  test_os_execution.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
archive/: NLP_RESTAPI_Generation.py
archive/llm_handle/: parser.py
archive/task_handle/: cmd_execution.py  (+1 more)
config/: ChatGPT_key.yaml  chatgpt_config_sample.py
example_chat_history/: SQL Injection Penetration Testing (12_03_2023 09_17_35).html
llm_handle/: README.md  parser.py
logs/: sample_pentestGPT_log.txt
pentest_records/: DeathNote_1.md  Kioptrix_level_1.md
pentestgpt/: README.md  _version.py  extract_cookie.py  main.py  test_connection.py
prompts/: README.md  prompt_class.py
resources/: README.md  prompts.csv
task_handle/: cmd_execution.py  custom_exceptions.py  template.py
tasks/: NLP_RESTAPI_Generation.py  NLP_RESTAPI_Repairment.py  crawler.py  example_chatgpt_api.py  example_sqlmap.py  jail_break.py  test_os_execution.py
test_history/: README.md
tests/: testBrowsing.py  testLogin.py  test_langfuse.py
utils/: chatgpt.py  chatgpt_api.py  chatgpt_browser.py  login_test.py  pentest_gpt.py  prompt_select.py  report_generator.py  spinner.py  task_handler.py  web_parser.py
(+41 files in other folders)
